--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <title>Infographic Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link  rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'><link>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
   <script src="main.js"></script>
-  <link  rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'><link>
+  <script src="data.js"></script>
+  <script src="interactions.js"></script>
+
+  
 </head>
 <body>
 
@@ -21,24 +28,24 @@
   <div class="row">
     <div id="right-col" class="col-sm-4">
       <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <label>Select the Period:</label>
+      <select id="periodselect" name="period">
+      </select>
+      <p>Choose the period </p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div  id="middle-col" class="col-sm-4">
       <h3>Column 2</h3>
       <label>Select the Airport:</label>
       <select id="airportselect" name="airpot">
-        <!-- <option value="0">Amsterdam</option>
-        <option value="1">Rotterdam</option>
-        <option value="2">Eindhoven</option>
-        <option value="3">Groningen</option> -->
-        
       </select>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Choose the location of the airport</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div  id="left-col" class="col-sm-4">
-      <h3>Column 3</h3>        
+      <h3>Column 3</h3>
+      <select id="topicselect" name="topic">
+      </select>    
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
